-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.21 - Dec 29, 2020

 + GUI (Linux): File->"Download from YouTube" (via /usr/bin/youtube-dl)
 - core: --gain didn't work (v1.20 bug)


fmedia v1.20 - Oct 9, 2020

 + --auto-attenuate: Automatically reduce the volume of loud tracks
 + new --globcmd commands: next, pause, unpause
 + tui: ability to pause/unpause recording with 'Space' key
 + GUI: "Repeat: None/Track/All"
 + help.txt: Indonesian translation
 - GUI-GTK: fix incorrect behaviour on Play/Pause event


fmedia v1.19 - Aug 22, 2020

 + Pulse: support recording
 + OSS: support recording
 * --capture-buffer argument: all audio modules now support it
 - "-o .ogg" command line didn't work (v1.13 bug)
 - .m4a write: couldn't create file from source file with an invalid frame


fmedia v1.18 - Jul 4, 2020

 + Pulse: support 8-bit playback
 + help.txt: Spanish translation
 * core: skip unknown modules in fmedia-user.conf
 * file.in, file.out: can use thread pool for asynchronous I/O
 - --split: .mp3 output: corrupted first frame
 - .raw: reading didn't work
 - ID3v2 read: fix parsing frame data with 'unsync' flag
 - .flac read: couldn't skip corrupted meta block
 * use BSD 2-Clause License


fmedia v1.17 - Apr 30, 2020

 + GUI: remember the current active track and playlist scroll position
 + GUI (Linux): mark the currently playing track
 + --capture-buffer argument - Length (in msec) of the capture buffer (WASAPI, ALSA)
 - Linux: core.so: don't use glibc 2.29


fmedia (Android) v0.3 - Mar 15, 2020

 + Record audio button
 + setting: Show 'Record' Button
 + setting: Directory for Recordings
 + save/restore playlist scroll position


fmedia v1.16 - Mar 8, 2020

 + GUI: new command: List -> Read Meta Tags
 + GUI (Windows): "file_delete_method" configuration setting
 + queue: stop playback after many consecutive errors